basic title and intro text

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<h1>Rob Kondratowicz</h1>
+<h3>Software Engineer</h3>
+
+<h1>About Me</h1>
+<p>
+  I came from the world of software sales in the human capital industry, where I was inspired by developers progressing in their fields to change my own career course. 
+
+  My creativity has traditionally been channeled through musicianship and illustration. Learning development made sense for both the creative side of my brain as well as the logical side. 
+
+  As a software engineer, my goal is to leverage my coding skills gained in the classroom in combination with my ability to create memorable solutions. 
+</p>
+
+
