actualize and capstone sections

--- a/index.html
+++ b/index.html
@@ -10,4 +10,19 @@
   As a software engineer, my goal is to leverage my coding skills gained in the classroom in combination with my ability to create memorable solutions. 
 </p>
 
+<h1>Actualize Coding Bootcamp</h1>
+<p>
+  
+  While I learned some HTML and CSS in college and on my own, Actualize not only accelerated my education in coding but also taught me the process to continue developing skills on my own once completing the program. 
+
+</p>
+
+<h2>Capstone Project</h2>
+
+<p>
+  
+  I personally built and presented my app Bidcast, which allows podcasts and advertisers to connect through a bidding format. Podcasts can post available ad space and advertisers can place bids to be featured in the podcast's ads. With a Rails backend and Vue frontend, I learned and leveraged ActionCable to display the most up to date information for all users as data was being driven to the site. 
+
+</p>
+
 
