about me update

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 						<div class="inner">
 							<h2>Rob Kondratowicz</h2>
 							<p>Full Stack Software Engineer<br />
-							site template freebie<br />
 							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button primary">Activate</a></li>
@@ -56,10 +55,14 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>About Me</h2>
+								<p>
+                  I came from the world of software sales in the human capital industry, where I was inspired by developers progressing in their fields to change my own career course. <br />
+
+                  My creativity has traditionally been channeled through musicianship and illustration. Learning development made sense for both the creative side of my brain as well as the logical side. <br />
+
+                  As a software engineer, my goal is to leverage my coding skills gained in the classroom in combination with my ability to create memorable solutions. 
+                </p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
