other sections updated in theme

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Rob Kondratowicz</h2>
-							<p>Full Stack Software Engineer<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<p>Full Stack Software Engineer</p>
 							<ul class="actions special">
 								<li><a href="#" class="button primary">Activate</a></li>
 							</ul>
@@ -57,10 +56,14 @@
 							<header class="major">
 								<h2>About Me</h2>
 								<p>
-                  I came from the world of software sales in the human capital industry, where I was inspired by developers progressing in their fields to change my own career course. <br />
+                  I came from the world of software sales in the human capital industry, where I was inspired by developers progressing in their fields to change my own career course.
+                </p>
 
-                  My creativity has traditionally been channeled through musicianship and illustration. Learning development made sense for both the creative side of my brain as well as the logical side. <br />
+                <p>
+                  My creativity has traditionally been channeled through musicianship and illustration. Learning development made sense for both the creative side of my brain as well as the logical side. 
+                </p>
 
+                <p>
                   As a software engineer, my goal is to leverage my coding skills gained in the classroom in combination with my ability to create memorable solutions. 
                 </p>
 							</header>
@@ -76,16 +79,14 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Actualize Coding Bootcamp</h2>
+								<p>While I learned some HTML and CSS in college and on my own, Actualize not only accelerated my education in coding but also taught me the process to continue developing skills on my own once completing the program. </p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Capstone Project</h2>
+								<p>I personally built and presented my app Bidcast, which allows podcasts and advertisers to connect through a bidding format. Podcasts can post available ad space and advertisers can place bids to be featured in the podcast's ads. With a Rails backend and Vue frontend, I learned and leveraged ActionCable to display the most up to date information for all users as data was being driven to the site. </p>
 							</div>
 						</section>
 						<section class="spotlight">
