embedded capstone youtube

--- a/index.html
+++ b/index.html
@@ -87,9 +87,13 @@
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Capstone Project</h2>
 								<p>I personally built and presented my app Bidcast, which allows podcasts and advertisers to connect through a bidding format. Podcasts can post available ad space and advertisers can place bids to be featured in the podcast's ads. With a Rails backend and Vue frontend, I learned and leveraged ActionCable to display the most up to date information for all users as data was being driven to the site. </p>
+                <ul class="actions special">
+                  <li><a href="generic.html" class="button primary">More on Bidcast</a></li>
+                </ul>
 							</div>
 						</section>
 						<section class="spotlight">
+
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Augue eleifend aliquet<br />
 								sed condimentum</h2>
