pre heroku push

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
+											<li><a href="generic.html">Bidcast</a></li>
 											<li><a href="elements.html">Elements</a></li>
 											<li><a href="#">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
@@ -43,9 +43,9 @@
 						<div class="inner">
 							<h2>Rob Kondratowicz</h2>
 							<p>Full Stack Software Engineer</p>
-							<ul class="actions special">
+<!-- 							<ul class="actions special">
 								<li><a href="#" class="button primary">Activate</a></li>
-							</ul>
+							</ul> -->
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
