--- a/generic.html
+++ b/generic.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Rob Kondratowicz</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -53,7 +53,7 @@
 								<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. </p>
 
                 <div align="center" class="video-container iframe">
-                  <iframe align="center" width='700' height='550' src="https://www.youtube.com/embed/5pmeG-yIQvw?start=391" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe align="center"  src="https://www.youtube.com/embed/5pmeG-yIQvw?start=391" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
 
 								<hr />
