changes to capstone and contact

--- a/bidcast.html
+++ b/bidcast.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Spectral by HTML5 UP</title>
+		<title>Bidcast - Rob Kondratowicz</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,10 +27,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="bidcast.html">Bidcast</a></li>
+											<li><a href="elements.html">Contact</a></li>
+											
+											
 										</ul>
 									</div>
 								</li>
@@ -47,21 +47,27 @@
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<h3>Lorem ipsum dolor</h3>
-								<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor.</p>
+								<h3>Capstone Presentation</h3>
+								<p>Bidcast was my final project at Actualize Coding Bootcamp, which was presented in front of a live stream audience. A panel of past alumni and the school's president asked questions and commented on the features and technologies included in the app.</p>
 
-								<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. </p>
+								<p>I chose to build this app because my goal is to work on projects that support creatives. My vision was to help small podcasts find a revenue stream that helps them continue pursuing their passion.</p>
 
                 <div align="center" class="video-container iframe">
-                  <iframe align="center"  src="https://www.youtube.com/embed/5pmeG-yIQvw?start=391" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe align="center"  src="https://www.youtube.com/embed/5pmeG-yIQvw?start=391&end=1008" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
 
 								<hr />
 
-								<h4>Feugiat aliquam</h4>
-								<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. </p>
+								<h4>Tools</h4>
+								<p>The app is built with a <b>Ruby on Rails</b> backend and <b>Vue.js</b> frontend, which were part of the curriculum in the bootcamp.</p>
 
-								<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus.</p>
+								<p>I researched and implemented technology that was not covered in bootcamp, such as <b>Action Cable</b> to update live data on a page without the user refreshing their browser, <b>CronJob</b> to change expired data, and <b>ActiveStorage</b> to handle files uploaded by users. </p>
+
+                <h4>Links</h4>
+                <p><a href="https://bidcast.herokuapp.com/">Bidcast Website</a></p>
+                <p><a href="https://github.com/robkondrat/bidcast">Backend Repository</a></p>
+                <p><a href="https://github.com/robkondrat/vue-bidcast">Frontend Repository</a></p>
+
 							</div>
 						</section>
 
