--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Bidcast</a></li>
+											<li><a href="bidcast.html">Bidcast</a></li>
 											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+                      <li><a href="contact.html">Contact</a></li>
+
 										</ul>
 									</div>
 								</li>
@@ -85,19 +85,20 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Capstone Project</h2>
+								<h2>Bidcast - Capstone Project</h2>
 								<p>I personally built and presented my app Bidcast, which allows podcasts and advertisers to connect through a bidding format. Podcasts can post available ad space and advertisers can place bids to be featured in the podcast's ads. With a Rails backend and Vue frontend, I learned and leveraged ActionCable to display the most up to date information for all users as data was being driven to the site. </p>
                 <ul class="actions special">
-                  <li><a href="generic.html" class="button primary">More on Bidcast</a></li>
+                  <li><a href="bidcast.html" class="button primary">More on Bidcast</a></li>
                 </ul>
 							</div>
 						</section>
 						<section class="spotlight">
 
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<blockquote>"You cannot discover new oceans unless you have the courage to lose sight of the shore."
+                  <p>- André Gide, Novelist</p>
+                </blockquote>
+                
 							</div>
 						</section>
 					</section>
