--- a/elements.html
+++ b/elements.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Rob Kondratowicz</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -27,7 +27,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Bidcast</a></li>
+											<li><a href="bidcast.html">Bidcast</a></li>
 											<li><a href="elements.html">Elements</a></li>
 											<li><a href="#">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
