fixed main banner

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="landing is-preload">
@@ -19,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Rob Kondratowicz</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -68,9 +70,9 @@
                 </p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><a href="https://www.linkedin.com/in/robkondratowicz/" target="_blank" class="fa fa-linkedin"></a></li>
+								<li><a href="https://github.com/robkondrat" target="_blank" class="fa fa-github"></a></li>
+  							<li><a href="https://www.instagram.com/rkondrat/?hl=en" target="_blank" class="fa fa-instagram"></a></li>
 							</ul>
 						</div>
 					</section>
