--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="bidcast.html">Bidcast</a></li>
-											<li><a href="elements.html">Elements</a></li>
+											<li><a href="actualize.html">Actualize</a></li>
                       <li><a href="contact.html">Contact</a></li>
 
 										</ul>
@@ -80,9 +80,12 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/actualize-boardroom.jpg" alt="" /></div><div class="content">
 								<h2>Actualize Coding Bootcamp</h2>
 								<p>While I learned some HTML and CSS in college and on my own, Actualize not only accelerated my education in coding but also taught me the process to continue developing skills on my own once completing the program. </p>
+                <ul class="actions special">
+                  <li><a href="actualize.html" class="button primary">More on Actualize</a></li>
+                </ul>
 							</div>
 						</section>
 						<section class="spotlight">
