--- a/bidcast.html
+++ b/bidcast.html
@@ -28,7 +28,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="bidcast.html">Bidcast</a></li>
-											<li><a href="elements.html">Contact</a></li>
+											<li><a href="actualize.html">Actualize</a></li>
 											
 											
 										</ul>
