main page images and image styling

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/Bidcast-screenshot.png" alt="" /></div><div class="content">
 								<h2>Bidcast - Capstone Project</h2>
 								<p>I personally built and presented my app Bidcast, which allows podcasts and advertisers to connect through a bidding format. Podcasts can post available ad space and advertisers can place bids to be featured in the podcast's ads. With a Rails backend and Vue frontend, I learned and leveraged ActionCable to display the most up to date information for all users as data was being driven to the site. </p>
                 <ul class="actions special">
@@ -99,7 +99,7 @@
 						</section>
 						<section class="spotlight">
 
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/water.png" alt="" /></div><div class="content">
 								<blockquote>"You cannot discover new oceans unless you have the courage to lose sight of the shore."
                   <p>- André Gide, Novelist</p>
                 </blockquote>
