added main page sections for full measure and the wall

--- a/index.html
+++ b/index.html
@@ -97,6 +97,24 @@
                 </ul>
 							</div>
 						</section>
+            <section class="spotlight">
+              <div class="image"><img src="images/Full Measure 2.png" alt="" /></div><div class="content">
+                <h2>Full Measure</h2>
+                <p>Dog poop.</p>
+                <ul class="actions special">
+                  <li><a href="bidcast.html" class="button primary">More on Full Measure</a></li>
+                </ul>
+              </div>
+            </section>
+            <section class="spotlight">
+              <div class="image"><img src="images/The Wall 1.png" alt="" /></div><div class="content">
+                <h2>The Wall</h2>
+                <p>Censor.</p>
+                <ul class="actions special">
+                  <li><a href="bidcast.html" class="button primary">More on The Wall</a></li>
+                </ul>
+              </div>
+            </section>
 						<section class="spotlight">
 
 							<div class="image"><img src="images/water.png" alt="" /></div><div class="content">
