full measure page created, with content and images

--- a/bidcast.html
+++ b/bidcast.html
@@ -39,7 +39,7 @@
 					</header>
 
 				<!-- Main -->
-					<article id="main">
+					<article id="main-bidcast">
 						<header>
 							<h2>Bidcast</h2>
 							<p>Actualize Capstone Project - Bidding site for podcast ad-space</p>
