--- a/index.html
+++ b/index.html
@@ -89,7 +89,12 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/Bidcast-screenshot.png" alt="" /></div><div class="content">
+							<div class="image">
+                <a href="bidcast.html">
+                  <img src="images/Bidcast-screenshot.png" alt="" />
+                </a>
+              </div>
+              <div class="content">
 								<h2>Bidcast - Capstone Project</h2>
 								<p>I personally built and presented my app Bidcast, which allows podcasts and advertisers to connect through a bidding format. Podcasts can post available ad space and advertisers can place bids to be featured in the podcast's ads. With a Rails backend and Vue frontend, I learned and leveraged ActionCable to display the most up to date information for all users as data was being driven to the site. </p>
                 <ul class="actions special">
@@ -100,9 +105,9 @@
             <section class="spotlight">
               <div class="image"><img src="images/Full Measure 2.png" alt="" /></div><div class="content">
                 <h2>Full Measure</h2>
-                <p>Dog poop.</p>
+                <p>Group built application that allows user to view maps of sidewalk doggie doo-doo in their area reported by other users.</p>
                 <ul class="actions special">
-                  <li><a href="bidcast.html" class="button primary">More on Full Measure</a></li>
+                  <li><a href="full_measure.html" class="button primary">More on Full Measure</a></li>
                 </ul>
               </div>
             </section>
