--- a/bidcast.html
+++ b/bidcast.html
@@ -26,9 +26,11 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="bidcast.html">Bidcast</a></li>
-											<li><a href="actualize.html">Actualize</a></li>
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="bidcast.html">Bidcast</a></li>
+                      <li><a href="full_measure.html">Full Measure</a></li>
+                      <li><a href="actualize.html">Actualize</a></li>
+                      <li><a href="contact.html">Contact</a></li>
 											
 											
 										</ul>
