--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
                     <ul>
                       <li><a href="index.html">Home</a></li>
                       <li><a href="bidcast.html">Bidcast</a></li>
+                      <li><a href="full_measure.html">Full Measure</a></li>
                       <li><a href="actualize.html">Actualize</a></li>
                       <li><a href="contact.html">Contact</a></li>
 
