--- a/full_measure.html
+++ b/full_measure.html
@@ -28,7 +28,9 @@
                     <ul>
                       <li><a href="index.html">Home</a></li>
                       <li><a href="bidcast.html">Bidcast</a></li>
+                      <li><a href="full_measure.html">Full Measure</a></li>
                       <li><a href="actualize.html">Actualize</a></li>
+                      <li><a href="contact.html">Contact</a></li>
                       
                       
                     </ul>
@@ -63,17 +65,9 @@
                 <p>Future releases would not only include an interactive map but give the user an option to set a walking route with the least amount of reported poops.</p>
 
 
-                <hr />
-
-                <h4>Tools</h4>
-                <p>The app is built with a <b>Ruby on Rails</b> backend and <b>Vue.js</b> frontend, which were part of the curriculum in the bootcamp.</p>
-
-                <p>I researched and implemented technology that was not covered in bootcamp, such as <b>Action Cable</b> to update live data on a page without the user refreshing their browser, <b>CronJob</b> to change expired data, and <b>ActiveStorage</b> to handle files uploaded by users. </p>
-
                 <h4>Links</h4>
-                <p><a href="https://bidcast.herokuapp.com/">Bidcast Website</a></p>
-                <p><a href="https://github.com/robkondrat/bidcast">Backend Repository</a></p>
-                <p><a href="https://github.com/robkondrat/vue-bidcast">Frontend Repository</a></p>
+                <p><a href="https://github.com/robkondrat/FULL_MEASURE_backend">Full Measure Backend Repository</a></p>
+                <p><a href="https://github.com/robkondrat/FULL_MEASURE_frontend">Full Measure Frontend Repository</a></p>
 
               </div>
             </section>
