added the wall page, updated links in nav, page css

--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,7 @@
                       <li><a href="index.html">Home</a></li>
                       <li><a href="bidcast.html">Bidcast</a></li>
                       <li><a href="full_measure.html">Full Measure</a></li>
+                      <li><a href="the_wall.html">The Wall</a></li>
                       <li><a href="actualize.html">Actualize</a></li>
                       <li><a href="contact.html">Contact</a></li>
 
