--- a/the_wall.html
+++ b/the_wall.html
@@ -42,34 +42,32 @@
           </header>
 
         <!-- Main -->
-          <article id="main-full-measure">
+          <article id="main-the-wall">
             <header>
-              <h2>Full Measure</h2>
-              <p>Actualize Group Project - Watch out for dog poop!</p>
+              <h2>The Wall</h2>
+              <p>Actualize Group Project - Censor Browser Content</p>
             </header>
             <section class="wrapper style5">
               <div class="inner">
 
                 <h3></h3>
-                <p>We tried to have fun with this group project while still implementing some of the concepts we learned in class as well as additional tools.</p>
+                <p>Chrome Extension</p>
 
-                <img class="image fit" src="images/Full Measure 1.png">
+                <img class="image fit" src="images/The Wall 1.png">
 
-                <p>My partner and I chose this so we could learn how to utilize <b>Google's Maps Javascript API</b> to display a map based on an address submitted by a user.</p>
+                <p>Manipulate the DOM.</p>
 
                 <img class="image fit" src="images/Full Measure 2.png">
 
-                <p>We also wanted to try using <b>Active Storage</b> for the first time to allow users to upload images (we chose a cartoon example to spare the audience).</p>
+                <p>Different components of Chrome Extension.</p>
 
                 <img class="image fit" src="images/Full Measure 3.png">
 
-                <p>Future releases would not only include an interactive map but give the user an option to set a walking route with the least amount of reported poops.</p>
+                <p>Future Releases</p>
 
 
                 <h4>Links</h4>
-                <p><a href="https://github.com/robkondrat/FULL_MEASURE_backend">Full Measure Backend Repository</a></p>
-                <p><a href="https://github.com/robkondrat/FULL_MEASURE_frontend">Full Measure Frontend Repository</a></p>
-
+                <p><a href="https://github.com/robkondrat/the_wall">The Wall Repository</a></p>
               </div>
             </section>
 
