the wall page content and images updated and done

--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
 							</div>
 						</section>
             <section class="spotlight">
-              <div class="image"><img src="images/Full Measure 2.png" alt="" /></div><div class="content">
+              <div class="image">
+                <a href="full_measure.html">
+                  <img src="images/Full Measure 2.png" alt="" />
+                </a>
+              </div>
+              <div class="content">
                 <h2>Full Measure</h2>
                 <p>Group built application that allows user to view maps of sidewalk doggie doo-doo in their area reported by other users.</p>
                 <ul class="actions special">
@@ -114,11 +119,16 @@
               </div>
             </section>
             <section class="spotlight">
-              <div class="image"><img src="images/The Wall 1.png" alt="" /></div><div class="content">
+              <div class="image">
+                <a href="the_wall.html">
+                  <img src="images/The Wall 1.png" alt="" />
+                </a>
+              </div>
+              <div class="content">
                 <h2>The Wall</h2>
-                <p>Censor.</p>
+                <p>Group built Chrome Extension that censors page content based on user preferences.</p>
                 <ul class="actions special">
-                  <li><a href="bidcast.html" class="button primary">More on The Wall</a></li>
+                  <li><a href="the_wall.html" class="button primary">More on The Wall</a></li>
                 </ul>
               </div>
             </section>
