--- a/the_wall.html
+++ b/the_wall.html
@@ -51,19 +51,17 @@
               <div class="inner">
 
                 <h3></h3>
-                <p>Chrome Extension</p>
+                <p>After working on a short Chrome Extension exercise, my partners and I wanted to further explore what we can accomplish. The original idea was to allow users to input names of movies or shows that they don't want to see spoilers about online within the extension's options page. The user would input the title and the extension would censor entire areas where the title is even mentioned.</p>
 
                 <img class="image fit" src="images/The Wall 1.png">
 
-                <p>Manipulate the DOM.</p>
+                <p>This was also my first time working on manipulating the DOM of a page. We tried out different variations of how much to censor and the style of what was censored.</p>
 
-                <img class="image fit" src="images/Full Measure 2.png">
+                <p>Working on this project helped me understand the different components (manifest, content script, background script) of a Chrome Extension and how they work with each other.</p>
 
-                <p>Different components of Chrome Extension.</p>
 
-                <img class="image fit" src="images/Full Measure 3.png">
 
-                <p>Future Releases</p>
+                <p>Future releases would expand the extensions ability to censor relevant information to the user-input movie/show by identifying commonly searched terms related to the user's input. The user should also have additional options of how content is censored, what appears on their page, sites to exclude, etc.</p>
 
 
                 <h4>Links</h4>
