actualize page content and images

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                 </p>
 							</header>
 							<ul class="icons major">
-								<li><a href="https://www.linkedin.com/in/robkondratowicz/" target="_blank" class="fa fa-linkedin"></a></li>
-								<li><a href="https://github.com/robkondrat" target="_blank" class="fa fa-github"></a></li>
-  							<li><a href="https://www.instagram.com/rkondrat/?hl=en" target="_blank" class="fa fa-instagram"></a></li>
+								<li><a class="fa fa-linkedin" href="https://www.linkedin.com/in/robkondratowicz/" target="_blank" ></a></li>
+								<li><a class="fa fa-github" href="https://github.com/robkondrat" target="_blank" ></a></li>
+  							<li><a lass="fa fa-instagram" href="https://www.instagram.com/rkondrat/?hl=en" target="_blank" c></a></li>
 							</ul>
 						</div>
 					</section>
