fixed broken links, target blank

--- a/actualize.html
+++ b/actualize.html
@@ -69,6 +69,8 @@
                     <li>Accumulated significant pair-programming experience.</li>
                     <li>Researched outside resources and effectively self-taught new technologies.</li>
                   </ul>
+                  <h4>Links</h4>
+                  <p><a href="https://anyonecanlearntocode.com/" target="_blank">Actualize Coding Bootcamp Website</a></p>
                   <hr />
                 </section>
 
