--- a/bidcast.html
+++ b/bidcast.html
@@ -66,9 +66,9 @@
 								<p>I researched and implemented technology that was not covered in bootcamp, such as <b>Action Cable</b> to update live data on a page without the user refreshing their browser, <b>CronJob</b> to change expired data, and <b>ActiveStorage</b> to handle files uploaded by users. </p>
 
                 <h4>Links</h4>
-                <p><a href="https://bidcast.herokuapp.com/">Bidcast Website</a></p>
-                <p><a href="https://github.com/robkondrat/bidcast">Backend Repository</a></p>
-                <p><a href="https://github.com/robkondrat/vue-bidcast">Frontend Repository</a></p>
+                <p><a href="https://bidcast.herokuapp.com/" target="_blank">Bidcast Website</a></p>
+                <p><a href="https://github.com/robkondrat/bidcast" target="_blank">Backend Repository</a></p>
+                <p><a href="https://github.com/robkondrat/vue-bidcast" target="_blank">Frontend Repository</a></p>
 
 							</div>
 						</section>
