--- a/full_measure.html
+++ b/full_measure.html
@@ -67,8 +67,8 @@
 
 
                 <h4>Links</h4>
-                <p><a href="https://github.com/robkondrat/FULL_MEASURE_backend">Full Measure Backend Repository</a></p>
-                <p><a href="https://github.com/robkondrat/FULL_MEASURE_frontend">Full Measure Frontend Repository</a></p>
+                <p><a href="https://github.com/robkondrat/FULL_MEASURE_backend" target="_blank">Full Measure Backend Repository</a></p>
+                <p><a href="https://github.com/robkondrat/FULL_MEASURE_frontend" target="_blank">Full Measure Frontend Repository</a></p>
 
               </div>
             </section>
