--- a/the_wall.html
+++ b/the_wall.html
@@ -65,7 +65,7 @@
 
 
                 <h4>Links</h4>
-                <p><a href="https://github.com/robkondrat/the_wall">The Wall Repository</a></p>
+                <p><a href="https://github.com/robkondrat/the_wall" target="_blank">The Wall Repository</a></p>
               </div>
             </section>
 
