--- a/index.html
+++ b/index.html
@@ -58,8 +58,16 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>About Me</h2>
-								<p>
+								<h2>¡Hola!</h2>
+                <p>Thanks for stopping by.</p>
+
+                <p>
+                  As a software engineer, my goal is to leverage my coding skills in combination with my creativity to build memorable applications. I was exposed to a number of concepts in the classroom and I am continuing to push myself through personal projects and development.
+                </p>
+
+                <p>Check out my projects and get to know me.</p>
+
+							<!-- 	<p>
                   I came from the world of software sales in the human capital industry, where I was inspired by developers progressing in their fields to change my own career course.
                 </p>
 
@@ -69,12 +77,12 @@
 
                 <p>
                   As a software engineer, my goal is to leverage my coding skills gained in the classroom in combination with my ability to create memorable solutions. 
-                </p>
+                </p> -->
 							</header>
 							<ul class="icons major">
 								<li><a class="fa fa-linkedin" href="https://www.linkedin.com/in/robkondratowicz/" target="_blank" ></a></li>
 								<li><a class="fa fa-github" href="https://github.com/robkondrat" target="_blank" ></a></li>
-  							<li><a lass="fa fa-instagram" href="https://www.instagram.com/rkondrat/?hl=en" target="_blank" c></a></li>
+  							<li><a class="fa fa-instagram" href="https://www.instagram.com/rkondrat/?hl=en" target="_blank" c></a></li>
 							</ul>
 						</div>
 					</section>
@@ -147,9 +155,8 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Get to know me</h2>
+								<p>Because I'd get to know you. I'm sure you're interesting too.</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
