more main page updates

--- a/index.html
+++ b/index.html
@@ -58,14 +58,21 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>¡Hola!</h2>
-                <p>Thanks for stopping by.</p>
+               <!--  <div class="col-sm-6">
+                  <img src="images/rob.jpg" width=80%></img>
+                </div> -->
+                <div class="col-sm-6">
+  								<h2>¡Hola!</h2>
+                  <p>Thanks for stopping by.</p>
 
-                <p>
-                  As a software engineer, my goal is to leverage my coding skills in combination with my creativity to build memorable applications. I was exposed to a number of concepts in the classroom and I am continuing to push myself through personal projects and development.
-                </p>
+                  <p>
+                    As a software engineer, my goal is to leverage my coding skills in combination with my creativity to build memorable applications. I was exposed to a number of concepts in the classroom and I am continuing to push myself through personal projects and development.
+                  </p>
 
-                <p>Check out my projects and get to know me.</p>
+                  <p>Check out my projects and get to know me.</p>
+
+                  <p><b>Ruby | Rails | JavaScript | Node.js | Vue.js | PostgreSQL |  HTML | CSS</b></p>
+                </div>
 
 							<!-- 	<p>
                   I came from the world of software sales in the human capital industry, where I was inspired by developers progressing in their fields to change my own career course.
