features/personal lists w fa icons

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <img src="images/rob.jpg" width=80%></img>
                 </div> -->
                 <div class="col-sm-6">
-  								<h2>¡Hola!</h2>
+  								<h2>Oh, Hello</h2>
                   <p>Thanks for stopping by.</p>
 
                   <p>
@@ -166,30 +166,30 @@
 								<p>Because I'd get to know you. I'm sure you're interesting too.</p>
 							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon solid fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon solid fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
 								<li class="icon solid fa-headphones-alt">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Strings</h3>
+									<p>I've been playing the guitar since I was 14 after quitting the violin. It's a serious passion of mine and it isn't too late for me to become a rockstar. I play the mandolin too, because why not?</p>
 								</li>
-								<li class="icon fa-heart">
+								<li class="icon solid fa-eye">
+									<h3>Illustration</h3>
+									<p>I used to draw comics in grade school and handed them out in the halls to make my friends laugh. Now I create digital illustrations as well as occassionally sketching tattoo ideas for others.</p>
+								</li>
+								<li class="icon solid fa-bolt">
+									<h3>Run Run Run</h3>
+									<p>Running is built into my weekly schedule and it helps me clear my head to focus in other areas. I developed a stress fracture a few years ago while training for the Chicago Marathon, but I still participate in shorter races.</p>
+								</li>
+								<li class="icon solid fa-beer">
+									<h3>Beer</h3>
+									<p>I just like beer.</p>
+								</li>
+								<!-- <li class="icon solid fa-car">
 									<h3>Aenean Primis</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
 								<li class="icon fa-flag">
 									<h3>Tortor Ut</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
+								</li> -->
 							</ul>
 						</div>
 					</section>
