style updates true blue

--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
-						<div class="inner">
+						<div class="inner icons">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Reach Out!</h2>
+								<p>If you think you or your team could use someone with my skill set, I am open to hearing about opportunities.</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="mailto: r.kondratowicz1@gmail.com" class="button fit primary">Email</a></li>
+								<li><a href="./Rob Kondratowicz - Resume.pdf" class="button fit">Resume</a></li>
 							</ul>
 						</div>
 					</section>
