edit footer and reach out section

--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
 						<div class="inner">
 							<h2>Rob Kondratowicz</h2>
 							<p>Full Stack Software Engineer</p>
-<!-- 							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
-							</ul> -->
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
@@ -58,9 +55,6 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-               <!--  <div class="col-sm-6">
-                  <img src="images/rob.jpg" width=80%></img>
-                </div> -->
                 <div class="col-sm-6">
   								<h2>Oh, Hello</h2>
                   <p>Thanks for stopping by.</p>
@@ -73,18 +67,6 @@
 
                   <p><b>Ruby | Rails | JavaScript | Node.js | Vue.js | PostgreSQL |  HTML | CSS</b></p>
                 </div>
-
-							<!-- 	<p>
-                  I came from the world of software sales in the human capital industry, where I was inspired by developers progressing in their fields to change my own career course.
-                </p>
-
-                <p>
-                  My creativity has traditionally been channeled through musicianship and illustration. Learning development made sense for both the creative side of my brain as well as the logical side. 
-                </p>
-
-                <p>
-                  As a software engineer, my goal is to leverage my coding skills gained in the classroom in combination with my ability to create memorable solutions. 
-                </p> -->
 							</header>
 							<ul class="icons major">
 								<li><a class="fa fa-linkedin" href="https://www.linkedin.com/in/robkondratowicz/" target="_blank" ></a></li>
@@ -211,16 +193,15 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a class="icon brands fa-linkedin"href="https://www.linkedin.com/in/robkondratowicz/" target="_blank"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/robkondrat" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.instagram.com/rkondrat/?hl=en" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
+
 
 			</div>
 
