update about me features

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
 									<h3>Run Run Run</h3>
 									<p>Running is built into my weekly schedule and it helps me clear my head to focus in other areas. I developed a stress fracture a few years ago while training for the Chicago Marathon, but I still participate in shorter races.</p>
 								</li>
-								<li class="icon solid fa-beer">
-									<h3>Beer</h3>
-									<p>I just like beer.</p>
+								<li class="icon solid fa-table-tennis">
+									<h3>Pong</h3>
+									<p>I'm pretty legendary. Let's play.</p>
 								</li>
 								<!-- <li class="icon solid fa-car">
 									<h3>Aenean Primis</h3>
