--- a/index.html
+++ b/index.html
@@ -10,209 +10,213 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-    <!-- Add icon library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<!-- Add icon library -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="landing is-preload">
 
 		<!-- Page Wrapper -->
-			<div id="page-wrapper">
-
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Rob Kondratowicz</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="bidcast.html">Bidcast</a></li>
-                      <li><a href="full_measure.html">Full Measure</a></li>
-                      <li><a href="the_wall.html">The Wall</a></li>
-											<li><a href="actualize.html">Actualize</a></li>
-                      <li><a href="contact.html">Contact</a></li>
-
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
+		<div id="page-wrapper">
+			<!-- Header -->
+			<header id="header" class="alt">
+				<h1><a href="index.html">Rob Kondratowicz</a></h1>
+				<nav id="nav">
+					<ul>
+						<li class="special">
+							<a href="#menu" class="menuToggle"><span>Menu</span></a>
+							<div id="menu">
+								<ul>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="magnitude.html">Magnitude</a></li>
+									<li><a href="bidcast.html">Bidcast</a></li>
+									<li><a href="full_measure.html">Full Measure</a></li>
+									<li><a href="the_wall.html">The Wall</a></li>
+									<li><a href="actualize.html">Actualize</a></li>
+									<li><a href="contact.html">Contact</a></li>
+								</ul>
+							</div>
+						</li>
+					</ul>
+				</nav>
+			</header>
+			<!-- Banner -->
+			<section id="banner">
+				<div class="inner">
+					<h2>Rob Kondratowicz</h2>
+					<p>Full Stack Software Engineer</p>
+				</div>
+				<a href="#one" class="more scrolly">Learn More</a>
+			</section>
+			<!-- One -->
+			<section id="one" class="wrapper style1 special">
+				<div class="inner">
+					<header class="major">
+						<div class="col-sm-6">
+							<h2>Oh, Hi!</h2>
+							<p>Thanks for stopping by.</p>
+							<p>
+								As a software engineer, my goal is to leverage my coding skills in combination with my creativity to build memorable applications. I was exposed to a number of concepts in the classroom and I am continuing to push myself through personal projects and development.
+							</p>
+							<p>Check out my projects and get to know me.</p>
+							<p><b>Ruby | Rails | JavaScript | React | Node | Vue | SQL |  HTML | CSS</b></p>
+						</div>
 					</header>
-
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Rob Kondratowicz</h2>
-							<p>Full Stack Software Engineer</p>
-						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
-					</section>
-
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-                <div class="col-sm-6">
-  								<h2>Oh, Hello</h2>
-                  <p>Thanks for stopping by.</p>
-
-                  <p>
-                    As a software engineer, my goal is to leverage my coding skills in combination with my creativity to build memorable applications. I was exposed to a number of concepts in the classroom and I am continuing to push myself through personal projects and development.
-                  </p>
-
-                  <p>Check out my projects and get to know me.</p>
-
-                  <p><b>Ruby | Rails | JavaScript | Node.js | Vue.js | PostgreSQL |  HTML | CSS</b></p>
-                </div>
-							</header>
-							<ul class="icons major">
-								<li><a class="fa fa-linkedin" href="https://www.linkedin.com/in/robkondratowicz/" target="_blank" ></a></li>
-								<li><a class="fa fa-github" href="https://github.com/robkondrat" target="_blank" ></a></li>
-  							<li><a class="fa fa-instagram" href="https://www.instagram.com/rkondrat/?hl=en" target="_blank" c></a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/actualize-boardroom.jpg" alt="" /></div><div class="content">
-								<h2>Actualize Coding Bootcamp</h2>
-								<p>While I learned some HTML and CSS in college and on my own, Actualize not only accelerated my education in coding but also taught me the process to continue developing skills on my own once completing the program. </p>
-                <ul class="actions special">
-                  <li><a href="actualize.html" class="button primary">More on Actualize</a></li>
-                </ul>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image">
-                <a href="bidcast.html">
-                  <img src="images/Bidcast-screenshot.png" alt="" />
-                </a>
-              </div>
-              <div class="content">
-								<h2>Bidcast - Capstone Project</h2>
-								<p>I personally built and presented my app Bidcast, which allows podcasts and advertisers to connect through a bidding format. Podcasts can post available ad space and advertisers can place bids to be featured in the podcast's ads. With a Rails backend and Vue frontend, I learned and leveraged ActionCable to display the most up to date information for all users as data was being driven to the site. </p>
-                <ul class="actions special">
-                  <li><a href="bidcast.html" class="button primary">More on Bidcast</a></li>
-                </ul>
-							</div>
-						</section>
-            <section class="spotlight">
-              <div class="image">
-                <a href="full_measure.html">
-                  <img src="images/Full Measure 2.png" alt="" />
-                </a>
-              </div>
-              <div class="content">
-                <h2>Full Measure</h2>
-                <p>Group built application that allows user to view maps of sidewalk doggie doo-doo in their area reported by other users.</p>
-                <ul class="actions special">
-                  <li><a href="full_measure.html" class="button primary">More on Full Measure</a></li>
-                </ul>
-              </div>
-            </section>
-            <section class="spotlight">
-              <div class="image">
-                <a href="the_wall.html">
-                  <img src="images/The Wall 1.png" alt="" />
-                </a>
-              </div>
-              <div class="content">
-                <h2>The Wall</h2>
-                <p>Group built Chrome Extension that censors page content based on user preferences.</p>
-                <ul class="actions special">
-                  <li><a href="the_wall.html" class="button primary">More on The Wall</a></li>
-                </ul>
-              </div>
-            </section>
-						<section class="spotlight">
-
-							<div class="image"><img src="images/water.png" alt="" /></div><div class="content">
-								<blockquote>"You cannot discover new oceans unless you have the courage to lose sight of the shore."
-                  <p>- André Gide, Novelist</p>
-                </blockquote>
-                
-							</div>
-						</section>
-					</section>
-
-				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Get to know me</h2>
-								<p>Because I'd get to know you. I'm sure you're interesting too.</p>
-							</header>
-							<ul class="features">
-								<li class="icon solid fa-headphones-alt">
-									<h3>Strings</h3>
-									<p>I've been playing the guitar since I was 14 after quitting the violin. It's a serious passion of mine and it isn't too late for me to become a rockstar. I play the mandolin too, because why not?</p>
-								</li>
-								<li class="icon solid fa-eye">
-									<h3>Illustration</h3>
-									<p>I used to draw comics in grade school and handed them out in the halls to make my friends laugh. Now I create digital illustrations as well as occassionally sketching tattoo ideas for others.</p>
-								</li>
-								<li class="icon solid fa-bolt">
-									<h3>Run Run Run</h3>
-									<p>Running is built into my weekly schedule and it helps me clear my head to focus in other areas. I developed a stress fracture a few years ago while training for the Chicago Marathon, but I still participate in shorter races.</p>
-								</li>
-								<li class="icon solid fa-table-tennis">
-									<h3>Pong</h3>
-									<p>I'm pretty legendary. Let's play.</p>
-								</li>
-								<!-- <li class="icon solid fa-car">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li> -->
-							</ul>
-						</div>
-					</section>
-
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner icons">
-							<header>
-								<h2>Reach Out!</h2>
-								<p>If you think you or your team could use someone with my skill set, I am open to hearing about opportunities.</p>
-							</header>
-							<ul class="actions stacked">
-								<li><a href="mailto: r.kondratowicz1@gmail.com" class="button fit primary">Email</a></li>
-								<li><a href="./Rob Kondratowicz - Resume.pdf" class="button fit">Resume</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a class="icon brands fa-linkedin"href="https://www.linkedin.com/in/robkondratowicz/" target="_blank"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/robkondrat" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.instagram.com/rkondrat/?hl=en" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<ul class="icons major">
+						<li><a class="fa fa-linkedin" href="https://www.linkedin.com/in/robkondratowicz/" target="_blank" ></a></li>
+						<li><a class="fa fa-github" href="https://github.com/robkondrat" target="_blank" ></a></li>
+						<li><a class="fa fa-instagram" href="https://www.instagram.com/rkondrat/?hl=en" target="_blank" c></a></li>
+					</ul>
+				</div>
+			</section>
+			<!-- Two -->
+			<section id="two" class="wrapper alt style2">
+				<!-- Actualize -->
+				<section class="spotlight">
+					<div class="image"><img src="images/actualize-boardroom.jpg" alt="" /></div><div class="content">
+						<h2>Actualize Coding Bootcamp</h2>
+						<p>While I learned some HTML and CSS in college and on my own, Actualize not only accelerated my education in coding but also taught me the process to continue developing skills on my own once completing the program. </p>
+						<ul class="actions special">
+							<li><a href="actualize.html" class="button primary">More on Actualize</a></li>
 						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</div>
+				</section>
+				<!-- Magnitude -->
+				<section class="spotlight">
+					<div class="image">
+						<a href="magnitude.html">
+							<img src="images/magnitude-screenshot.png" alt="" />
+						</a>
+					</div>
+					<div class="content">
+						<h2>Magnitude - Track Covid Data</h2>
+						<p>This React application leverages a public COVID-19 data API as well as Chart.js to visualize the impact of the pandemic at state and national levels. </p>
+						<ul class="actions special">
+						<li><a href="magnitude.html" class="button primary">More on Magnitude</a></li>
 						</ul>
-					</footer>
-
-
-			</div>
-
+					</div>
+				</section>
+				<!-- Bidcast -->
+				<section class="spotlight">
+					<div class="image">
+						<a href="bidcast.html">
+							<img src="images/Bidcast-screenshot.png" alt="" />
+						</a>
+					</div>
+					<div class="content">
+						<h2>Bidcast - Capstone Project</h2>
+						<p>I personally built and presented my app Bidcast, which allows podcasts and advertisers to connect through a bidding format. Podcasts can post available ad space and advertisers can place bids to be featured in the podcast's ads. With a Rails backend and Vue frontend, I learned and leveraged ActionCable to display the most up to date information for all users as data was being driven to the site. </p>
+						<ul class="actions special">
+						<li><a href="bidcast.html" class="button primary">More on Bidcast</a></li>
+						</ul>
+					</div>
+				</section>
+				<section class="spotlight">
+					<div class="image">
+						<a href="full_measure.html">
+							<img src="images/Full Measure 2.png" alt="" />
+						</a>
+					</div>
+					<div class="content">
+						<h2>Full Measure</h2>
+						<p>Group built application that allows user to view maps of sidewalk doggie doo-doo in their area reported by other users.</p>
+						<ul class="actions special">
+							<li><a href="full_measure.html" class="button primary">More on Full Measure</a></li>
+						</ul>
+					</div>
+				</section>
+				<section class="spotlight">
+					<div class="image">
+						<a href="the_wall.html">
+							<img src="images/The Wall 1.png" alt="" />
+						</a>
+					</div>
+					<div class="content">
+						<h2>The Wall</h2>
+						<p>Group built Chrome Extension that censors page content based on user preferences.</p>
+						<ul class="actions special">
+							<li><a href="the_wall.html" class="button primary">More on The Wall</a></li>
+						</ul>
+					</div>
+				</section>
+				<section class="spotlight">
+					<div class="image">
+						<img src="images/water.png" alt="" />
+					</div>
+					<div class="content">
+						<blockquote>"You cannot discover new oceans unless you have the courage to lose sight of the shore."
+							<p>- André Gide, Novelist</p>
+						</blockquote>
+					</div>
+				</section>
+			</section>
+			<!-- Three -->
+			<section id="three" class="wrapper style3 special">
+				<div class="inner">
+					<header class="major">
+						<h2>Get to know me</h2>
+						<p>Because I'd get to know you. I'm sure you're interesting too.</p>
+					</header>
+					<ul class="features">
+						<li class="icon solid fa-headphones-alt">
+							<h3>Strings</h3>
+							<p>I've been playing the guitar since I was 14 after quitting the violin. It's a serious passion of mine and it isn't too late for me to become a rockstar. I play the mandolin too, because why not?</p>
+						</li>
+						<li class="icon solid fa-eye">
+							<h3>Illustration</h3>
+							<p>I used to draw comics in grade school and handed them out in the halls to make my friends laugh. Now I create digital illustrations as well as occassionally sketching tattoo ideas for others.</p>
+						</li>
+						<li class="icon solid fa-bolt">
+							<h3>Run Run Run</h3>
+							<p>Running is built into my weekly schedule and it helps me clear my head to focus in other areas. I developed a stress fracture a few years ago while training for the Chicago Marathon, but I still participate in shorter races.</p>
+						</li>
+						<li class="icon solid fa-table-tennis">
+							<h3>Pong</h3>
+							<p>I'm pretty legendary. Let's play.</p>
+						</li>
+						<!-- <li class="icon solid fa-car">
+							<h3>Aenean Primis</h3>
+							<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+						</li>
+						<li class="icon fa-flag">
+							<h3>Tortor Ut</h3>
+							<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+						</li> -->
+					</ul>
+				</div>
+			</section>
+			<!-- CTA -->
+			<section id="cta" class="wrapper style4">
+				<div class="inner icons">
+					<header>
+						<h2>Reach Out!</h2>
+						<p>If you think you or your team could use someone with my skill set, I am open to hearing about opportunities.</p>
+					</header>
+					<ul class="actions stacked">
+						<li><a href="mailto: r.kondratowicz1@gmail.com" class="button fit primary">Email</a></li>
+						<li><a href="./Rob Kondratowicz - Resume.pdf" class="button fit">Resume</a></li>
+					</ul>
+				</div>
+			</section>
+			<!-- Footer -->
+			<footer id="footer">
+				<ul class="icons">
+					<li><a class="icon brands fa-linkedin"href="https://www.linkedin.com/in/robkondratowicz/" target="_blank"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/robkondrat" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.instagram.com/rkondrat/?hl=en" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</footer>
+		</div>
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 	</body>
 </html>
